akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/valid/MyEventSourcedEntity.java
package com.example;

import akka.javasdk.eventsourcedentity.EventSourcedEntity;

public class MyEventSourcedEntity extends EventSourcedEntity<String, Object> {}
